2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	refactored the code and added support for ctag-based synchronisation.

	* chrome/content/sogo-connector/general/preference.service.addressbook.groupdav.js:
	added methods for saving and retrieving the ctag of ab collections.

	* chrome/content/sogo-connector/general/implementors.addressbook.groupdav.js:
	removed obsolete module.

2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Bumped version number to 0.93

2009-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/sync.addressbook.groupdav.js:
	reset the status of pending connections if an error occurs during
	a collection operation.

2009-03-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
	(deleteManager): we invoke "deleteDirectory" after
	deletedSelectedCards, to ensure the list is deleted properly.

2009-03-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js: properly
	decode fields with base64 encoding.
	Work-around a bug of qp encoders which fold lines without escaping
	their crlf.

2009-02-23  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Updated German translation. Patch from
	Alexander Greiner-Baer <sogo-algb@freenet.de>
	* Added Italian translation. Patch from
	Marco Lertora <marco.lertora@infoporto.it>

2009-01-13  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * js/CalDAVAclManager.js
	We now correctly handle the deletion of identities
	with the "caldav_*" key from the user's preferences. 
	We also correctly reinitialize our ivars prior
	to perform a refresh of the ACLs.

2008-12-19  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* js/CalDAVAclManager.js
	Reidented the code. Also modified _appendIdentity()
	to NOT set any imip.identity to the corresponding