@@ -39,8 +39,7 @@
     src="chrome://sogo-connector/content/addressbook/addressbook.groupdav.overlay.js"/>
 
   <commandset id="addressBook">
-    <command id="cmd_syncGroupdav"
-      oncommand="SynchronizeGroupdavAddressbook(GetSelectedDirectory(), synchronizationCallback);"/>
+    <command id="cmd_syncGroupdav" oncommand="SCCommandSynchronize();"/>
   </commandset>
 
   <!--Add the GroupDAV synchronize button to the toolbar -->
